--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,14 @@
     <title>Atividade_1</title>
 </head>
 <body>
+<nav><h2>Menu Estelar</h2>
+<ul><li><a href="http://www.puc-rio.br">PUC-Rio</a></li>
+<li><a href="resumo.html">Resumo</a></li>
+<li>Habilidades</li>
+<li>Educação</li>
+<li>Idiomas</li>
+<li>Versão 2</li>
+<li><a href="meu-curriculo.html">Meu currículo</a></li></ul></nav>
 <h1>Astronauta Spiff</h1>
 
 <img src="img/spif_na_nave.jfif" alt="Foto do spiff na nave">
@@ -20,8 +28,7 @@ Um intrépido e imaginativo astronauta com vasta experiência em exploração es
 
 <h2>Experiência Profissional</h2>
 <h3>Astronauta Intergalático e Comandante de Missão Solo</h3>
-Várias Expedições (Contínuo)
-
+<p>Várias Expedições (Contínuo)</p>
 Pilotou e manteve diversas naves espaciais de design exclusivo, incluindo a "Destruidora de Cartazes" e a "Vingadora de Júpiter".
 Realizou extensas pesquisas em planetas desconhecidos, catalogando flora, fauna e geologia exóticas (muitas vezes com resultados surpreendentes).
 Desenvolveu protocolos de comunicação rudimentares com várias espécies alienígenas (com sucesso variável).
@@ -63,16 +70,18 @@ Habilidade de argumentação persuasiva (especialmente com figuras de autoridade
 <li>Mestrado em Viagem Hiperespacial (com honras)</li>
 <li>Universidade Estelar de Calvin — Ciências da Galáxia</li>
 <li>Currículo incluiu estudos avançados em:</li>
+<ul>
 <li>Teoria da Propulsão a Jato de Papelão</li>
 <li>Linguística Alienígena Intuitiva</li>
 <li>Táticas de Fuga e Evasão Escolar Espacial</li>
 <li>Astronomia de Quintal Avançada</li>
-<li>Sobrevivência com Lancheiras e Suco de Limão</li>
+<li>Sobrevivência com Lancheiras e Suco de Limão</li></ul>
 </ol>
 <h2>Idiomas</h2>
 Terráqueo
-Glurpiano
-Dialetos de Saturno
+<p>Glurpiano</p>
+<p>Dialetos de Saturno</p>
 "Nenhum alienígena fica para trás... porque eu desintegro todos!"    
 </body>
 </html>
+<a href="http://www.puc-rio.br">PUC-Rio</a>
